fix add router animation

--- a/src/app/sites/header/header.component.html
+++ b/src/app/sites/header/header.component.html
@@ -1,7 +1,106 @@
-<div class="header-container" *ngIf="ctrlSrv.isHeaderShown$ | async">
+<!-- <div class="header-container" *ngIf="ctrlSrv.isHeaderShown$ | async">
     <header class="header-footer" @brickList fxLayout fxLayoutAlign="space-around center">
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/home">start</a>
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/promocje">promocje</a>
         <a class="menu-link" routerLinkActive="active-menu-link" routerLink="/kontakt">kontakt</a>
+    </header>
+</div> -->
+
+
+
+
+
+
+<div class="header-container" *ngIf="ctrlSrv.isHeaderShown$ | async" #parent>
+    <header class="header-footer" @brickList fxLayout>
+        <nav>
+            <div fxFlex="27">
+                <svg routerLinkActive="active-menu-item" class="menu-item" appPathLengthInfo [strokeBig]="'2.5px'" [parent]="parent"
+                    width="100%" height="100%" routerLink="/home" version="1.1" id="Layer_1"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 95 50">
+                    <g id="start">
+                        <path
+                            d="M64,15.82V31.64a2.72,2.72,0,0,0,.48,2,2.25,2.25,0,0,0,.41.34,2.64,2.64,0,0,0,1.79.29,5.27,5.27,0,0,0,1.79-.68" />
+                        <path d="M61.72,20.84h5.82" />
+                        <path d="M55,20.57V34.3" />
+                        <path d="M60.61,20.85a5.11,5.11,0,0,0-4,1.82,8.34,8.34,0,0,0-1,1.37A6.16,6.16,0,0,0,55,25.51" />
+                        <path
+                            d="M51.8,34.37a1.47,1.47,0,0,1-1.41-.57A3.94,3.94,0,0,1,50.24,32V25.12a5,5,0,0,0-1.09-2.85,4.24,4.24,0,0,0-2.45-1.5,6.69,6.69,0,0,0-3,.18,12,12,0,0,0-2.9,1.41" />
+                        <path
+                            d="M50.17,27.55a15.53,15.53,0,0,0-4.54-.8,8.29,8.29,0,0,0-3.27.53A3.41,3.41,0,0,0,40,30.34c.15,2.91,2.12,4.06,4.85,3.95A6.11,6.11,0,0,0,50.27,31" />
+                        <path
+                            d="M33.83,15.82V31.64a2.72,2.72,0,0,0,.48,2,2.25,2.25,0,0,0,.41.34,2.64,2.64,0,0,0,1.79.29,5.27,5.27,0,0,0,1.79-.68" />
+                        <path d="M31.57,20.84h5.82" />
+                        <path
+                            d="M19.62,32.19a7.32,7.32,0,0,0,5.64,2.14A4.44,4.44,0,0,0,29.2,32a3,3,0,0,0-.05-2.62,3.67,3.67,0,0,0-1.77-1.3,20.13,20.13,0,0,0-3.49-1A6,6,0,0,1,21.22,26a2.87,2.87,0,0,1-.57-3A4.15,4.15,0,0,1,24,20.68a5.18,5.18,0,0,1,5.34,1.79" />
+                    </g>
+                </svg>
+            </div>
+
+
+            <div fxFlex="41">
+                <svg routerLinkActive="active-menu-item" class="menu-item" appPathLengthInfo [strokeBig]="'2.5px'" [parent]="parent"
+                    width="100%" height="100%" routerLink="/promocje" version="1.1" id="Layer_1"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 145 50">
+                    <g id="promocje">
+                        <path
+                            d="M118.11,27.39c1.85,0,11.94,0,11.94,0a7.15,7.15,0,0,0-2.23-4.83,5.79,5.79,0,0,0-5.71-1.23,5.71,5.71,0,0,0-2.79,2.07,6.89,6.89,0,0,0-1,6.21,6.18,6.18,0,0,0,3.37,3.8,6.11,6.11,0,0,0,5.54-.31A4.76,4.76,0,0,0,129.1,31" />
+                        <path d="M113.2,15.05v2.64" />
+                        <path
+                            d="M107.53,37.44a3.32,3.32,0,0,0,4.17.32c1.76-1.16,1.5-3.27,1.5-5.1s0-3.76,0-5.64V20.61" />
+                        <path
+                            d="M108.29,24a3.37,3.37,0,0,0-.94-1.38,5.78,5.78,0,0,0-1.95-1.2,5.88,5.88,0,0,0-3.82-.05,5.75,5.75,0,0,0-2.79,2.07,6.89,6.89,0,0,0-1,6.21,6,6,0,0,0,3.4,3.65,6.6,6.6,0,0,0,2.24.47c.12,0,.25,0,.38,0a5.83,5.83,0,0,0,3.52-1.43,3,3,0,0,0,1.07-1.39" />
+                        <path
+                            d="M83.17,23.5a6.89,6.89,0,0,0-1,6.21,6,6,0,0,0,3.4,3.64,5.77,5.77,0,0,0,4.84-.22,6.14,6.14,0,0,0,2.38-2.31,6.74,6.74,0,0,0,.11-6.46,5.78,5.78,0,0,0-4.52-3.21A5.67,5.67,0,0,0,83.17,23.5Z" />
+                        <path
+                            d="M77.27,34.27c0-2.68,0-5.35,0-8,0-1.67-.24-3.7-1.83-4.62a4.28,4.28,0,0,0-4.17.23,6.43,6.43,0,0,0-2.09,1.93,20.09,20.09,0,0,0-1.3,2.58" />
+                        <path
+                            d="M67.9,34.29V29.07A23.63,23.63,0,0,0,67.63,24a3.91,3.91,0,0,0-.79-1.76,4,4,0,0,0-3.93-.82,5.27,5.27,0,0,0-2.52,1.76,20.58,20.58,0,0,0-2,3.53" />
+                        <path d="M58.41,20.63V34.29" />
+                        <path
+                            d="M43.22,23.5a6.89,6.89,0,0,0-1,6.21,6,6,0,0,0,3.4,3.64,5.77,5.77,0,0,0,4.84-.22,6.21,6.21,0,0,0,2.38-2.31A6.74,6.74,0,0,0,53,24.36a5.78,5.78,0,0,0-4.52-3.21A5.67,5.67,0,0,0,43.22,23.5Z" />
+                        <path d="M34,20.57V34.3" />
+                        <path
+                            d="M39.92,20.84a5.47,5.47,0,0,0-4.34,1.83,9.68,9.68,0,0,0-1,1.37,6.58,6.58,0,0,0-.63,1.47" />
+                        <path d="M17.53,20.63V39.92" />
+                        <path
+                            d="M17.42,28.6a10.24,10.24,0,0,0,2.67,3.81A5.74,5.74,0,0,0,24,33.65a5.21,5.21,0,0,0,4-2.51,6.64,6.64,0,0,0-2.78-9.59c-2.13-.92-4.26,0-5.91,1.4a10.52,10.52,0,0,0-1.75,2.62" />
+                    </g>
+                </svg>
+            </div>
+
+            <div fxFlex="32">
+                <svg routerLinkActive="active-menu-item" class="menu-item" appPathLengthInfo [strokeBig]="'2.5px'" [parent]="parent"
+                    width="100%" height="100%" routerLink="/kontakt" version="1.1" id="Layer_1"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 110 50">
+                    <g id="kontakt">
+                        <path d="M93.27,20.74h5.82" />
+                        <path
+                            d="M95.53,15.72V31.54a2.72,2.72,0,0,0,.48,2,1.86,1.86,0,0,0,.41.33,2.59,2.59,0,0,0,1.79.3,5.27,5.27,0,0,0,1.79-.68" />
+                        <path d="M80.84,29.87S88,23,90.47,20.61" />
+                        <path d="M84.72,26.08l5.93,8.12" />
+                        <path d="M80.84,15v19.3" />
+                        <path
+                            d="M76.94,34.33a1.28,1.28,0,0,1-1.33-.86,4.93,4.93,0,0,1-.23-1.58V25.05a5,5,0,0,0-1.09-2.85,4.27,4.27,0,0,0-2.45-1.5,6.69,6.69,0,0,0-3,.18A12,12,0,0,0,66,22.29" />
+                        <path
+                            d="M75.31,27.48a15.64,15.64,0,0,0-4.54-.8,8.26,8.26,0,0,0-3.27.53,3.41,3.41,0,0,0-2.38,3.06c.15,2.91,2.11,4.06,4.85,3.95a6.08,6.08,0,0,0,5.43-3.33" />
+                        <path d="M56,20.74h5.82" />
+                        <path
+                            d="M58.22,15.72V31.54a2.72,2.72,0,0,0,.48,2,1.86,1.86,0,0,0,.41.33,2.59,2.59,0,0,0,1.79.3,5.27,5.27,0,0,0,1.79-.68" />
+                        <path
+                            d="M52.2,34.24c0-2.9.08-5.8-.09-8.69-.08-1.51-.35-3.51-2-4.12a5.52,5.52,0,0,0-4.95,1,12.34,12.34,0,0,0-2.82,4" />
+                        <path d="M42.29,20.57V34.21" />
+                        <path
+                            d="M27.07,23.5a6.89,6.89,0,0,0-1,6.21,6,6,0,0,0,3.4,3.64,5.77,5.77,0,0,0,4.84-.22,6.14,6.14,0,0,0,2.38-2.31,6.74,6.74,0,0,0,.11-6.46,5.78,5.78,0,0,0-4.52-3.21A5.67,5.67,0,0,0,27.07,23.5Z" />
+                        <path d="M13.35,15v19.3" />
+                        <path d="M13.35,29.87S21,22.53,23,20.61" />
+                        <path d="M17.23,26.08S21.58,32,23.16,34.2" />
+                    </g>
+                </svg>
+            </div>
+        </nav>
     </header>
 </div>
