--- a/src/app/sites/header/header.component.css
+++ b/src/app/sites/header/header.component.css
@@ -3,8 +3,9 @@
 }
 .header-footer {
     margin: auto;   
-    max-width: 350px;
-    height: 50px;    
+    max-width: 300px;
+    width: 100%;
+    height: 100%;
     padding: 10px;    
 }
 .menu-link {
@@ -22,3 +23,24 @@
     font-weight: 800;
 }
 
+.menu-item {
+    outline: none;
+
+}
+
+.menu-item path {
+    fill: none;
+    stroke: black;
+    stroke-width: 1px;
+}
+
+
+.menu-item:hover path {
+    stroke: white;
+    stroke-width: 2px;
+}
+
+.active-menu-item path {
+    stroke-width: 3.5px;
+    stroke: black
+}
