--- a/src/app/sites/promocje/promocje/promocje.component.html
+++ b/src/app/sites/promocje/promocje/promocje.component.html
@@ -1,6 +1,6 @@
 <div class="component-container">
     <div fxLayout="row" fxLayoutAlign="center center" class="promocje-container">
-        <div fxLayout="column" fxLayout.gt-sm="row wrap" fxFlex.gt-sm="0 1 1000px">
+        <div fxLayout="column" fxLayout.gt-sm="row wrap">
                 <mat-card  fxFlex.gt-sm="0 1 calc(50%-10px)">
                     <mat-card-header>
                         <mat-card-title>Obsługa Marketingowa</mat-card-title>
