--- a/src/app/sites/social-links/social-links.component.html
+++ b/src/app/sites/social-links/social-links.component.html
@@ -1,36 +1,75 @@
-<svg *ngIf="isShown" @brickList x="0" y="0" height="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" viewBox="0 0 1100 250" preserveAspectRatio="xMidYMid meet">
-    <g>
+<svg #parent *ngIf="isShown" @brickList x="0" y="0" height="100%" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" viewBox="0 0 1100 250" preserveAspectRatio="xMidYMid meet">
+    <g class="social-icon" transform-origin="center">
         <a xlink:href="https://www.facebook.com/newIdPL">
-            <rect x="7%" y="60" width="130" height="130" fill="black" fill-opacity="0" ></rect>
-            <svg x="7%" y="60" width="130" height="130" viewBox="0 0 24 24"  preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"><path d="m2.707 24h8.804c.414 0 .75-.336.75-.75 0-.16-.01-6.84-.011-7 0-.414-.336-.75-.75-.75h-2.25v-2.5h2.25c.414 0 .75-.336.75-.75v-2.817c0-2.444 1.989-4.433 4.433-4.433h2.067v2.5h-1.25c-.965 0-1.75.785-1.75 1.75v3c0 .414.336.75.75.75h3.04l-.625 2.5h-2.415c-.414 0-.75.336-.75.75v7c0 .414.336.75.75.75h4.793c1.493 0 2.707-1.214 2.707-2.707v-18.586c0-1.493-1.214-2.707-2.707-2.707h-18.586c-1.493 0-2.707 1.214-2.707 2.707v18.587c0 1.492 1.214 2.706 2.707 2.706zm-1.207-21.293c0-.666.541-1.207 1.207-1.207h18.587c.666 0 1.207.541 1.207 1.207v18.587c0 .666-.541 1.207-1.207 1.207h-4.044v-5.501h2.25c.344 0 .644-.234.728-.568l1-4c.118-.473-.239-.932-.728-.932h-3.25v-2.25c0-.136.114-.25.25-.25h2c.414 0 .75-.336.75-.75v-4c0-.414-.336-.75-.75-.75h-2.817c-3.271 0-5.933 2.662-5.933 5.933v2.067h-2.25c-.414 0-.75.336-.75.75v4c0 .414.336.75.75.75h2.25v5.5h-8.043c-.666 0-1.207-.541-1.207-1.207z" /> </svg>
+            <svg appPathLengthInfo [strokeBig]="'8px'"  [animDelay]="delayArr[0]" [parent]="parent" x="7%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+                <path d="M264.11,466.75H54.2c0,0-8.38-0.88-14.99-7.5c-3.99-3.99-6.17-7.87-6.17-16.32c0-21.61,0-388.07,0-388.07
+                s1.32-9.7,7.06-14.99c6.43-5.94,12.79-6.61,12.79-6.61h393.36c0,0,9.44,1.99,14.11,7.06c5.29,5.73,6.61,14.11,6.61,14.11v390.72
+                c0,0,0.44,7.06-6.61,14.55c-7.06,7.5-16.32,7.06-16.32,7.06H333.34l-0.88-167.58h56.89l8.82-65.71H332.9l0.44-52.48
+                c0,0,0.88-7.06,5.73-12.79c6.06-7.16,18.08-7.94,18.08-7.94l42.78-0.88v-58.21c0,0-22.8-2.43-30.43-2.65c-7.5-0.21-31.75,0-31.75,0
+                s-33.19,5.03-48.07,20.73c-24.25,25.58-25.58,56.01-25.58,56.01l1.32,58.21l-56.89-0.44l-0.44,65.71l56.89,0.44L264.11,466.75z"/>
+            </svg>
         </a>
     </g>
-    
-    <g>
+
+    <g class="social-icon" transform-origin="center">
         <a xlink:href="https://www.instagram.com/newId.PL/">
-            <rect x="25%" y="60" width="130" height="130" fill="black" fill-opacity="0" ></rect>
-            <svg x="25%" y="60" width="130" height="130" viewBox="0 0 512.00096 512.00096" xmlns="http://www.w3.org/2000/svg"><path d="m373.40625 0h-234.8125c-76.421875 0-138.59375 62.171875-138.59375 138.59375v234.816406c0 76.417969 62.171875 138.589844 138.59375 138.589844h234.816406c76.417969 0 138.589844-62.171875 138.589844-138.589844v-234.816406c0-76.421875-62.171875-138.59375-138.59375-138.59375zm108.578125 373.410156c0 59.867188-48.707031 108.574219-108.578125 108.574219h-234.8125c-59.871094 0-108.578125-48.707031-108.578125-108.574219v-234.816406c0-59.871094 48.707031-108.578125 108.578125-108.578125h234.816406c59.867188 0 108.574219 48.707031 108.574219 108.578125zm0 0"/><path d="m256 116.003906c-77.195312 0-139.996094 62.800782-139.996094 139.996094s62.800782 139.996094 139.996094 139.996094 139.996094-62.800782 139.996094-139.996094-62.800782-139.996094-139.996094-139.996094zm0 249.976563c-60.640625 0-109.980469-49.335938-109.980469-109.980469 0-60.640625 49.339844-109.980469 109.980469-109.980469 60.644531 0 109.980469 49.339844 109.980469 109.980469 0 60.644531-49.335938 109.980469-109.980469 109.980469zm0 0"/><path d="m399.34375 66.285156c-22.8125 0-41.367188 18.558594-41.367188 41.367188 0 22.8125 18.554688 41.371094 41.367188 41.371094s41.371094-18.558594 41.371094-41.371094-18.558594-41.367188-41.371094-41.367188zm0 52.71875c-6.257812 0-11.351562-5.09375-11.351562-11.351562 0-6.261719 5.09375-11.351563 11.351562-11.351563 6.261719 0 11.355469 5.089844 11.355469 11.351563 0 6.257812-5.09375 11.351562-11.355469 11.351562zm0 0"/></svg>
-        </a> 
+            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[1]" [parent]="parent" x="25%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+                <path d="M363.78,21H148.22C78.07,21,21,78.07,21,148.22v215.55C21,433.93,78.07,491,148.22,491h215.55
+                C433.93,491,491,433.93,491,363.78V148.22C491,78.07,433.93,21,363.78,21z"/>
+            <path d="M256,127.49c-168.89,3.03-168.87,254.02,0.01,257.02C424.89,381.48,424.87,130.49,256,127.49z"/>
+            <path d="M387.59,81.85c-49.91,0.89-49.9,75.06,0,75.95C437.49,156.9,437.49,82.73,387.59,81.85z"/>    
+            </svg>
+        </a>
     </g>
 
-    <g>
+    <g class="social-icon" transform-origin="center">
         <a xlink:href="https://g.page/newIdpl">
-            <rect x="44%" y="60" width="130" height="130" fill="black" fill-opacity="0" ></rect>
-            <svg x="44%" y="60" width="130" height="130"  viewBox="-78 0 511 512" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"><path d="m178.46875 252.285156c-19.445312 0-38.894531-7.402344-53.695312-22.207031-29.609376-29.605469-29.609376-77.78125 0-107.390625 14.339843-14.34375 33.410156-22.242188 53.695312-22.242188s39.351562 7.902344 53.695312 22.242188c29.609376 29.609375 29.609376 77.785156 0 107.390625-14.804687 14.804687-34.25 22.207031-53.695312 22.207031zm0-121.78125c-11.753906 0-23.507812 4.472656-32.457031 13.421875-17.898438 17.898438-17.898438 47.019531 0 64.917969 8.667969 8.667969 20.195312 13.441406 32.457031 13.441406s23.789062-4.773437 32.457031-13.441406c17.898438-17.898438 17.898438-47.019531 0-64.917969-8.949219-8.949219-20.703125-13.421875-32.457031-13.421875zm0 0" /><path d="m178.644531 512-11.613281-13.640625c-6.796875-7.988281-166.53125-197.050781-166.53125-320.390625 0-98.132812 79.835938-177.96875 177.96875-177.96875s177.96875 79.835938 177.96875 177.96875c0 117.273438-159.59375 311.984375-166.386719 320.214844zm-.175781-481.964844c-81.570312 0-147.933594 66.363282-147.933594 147.933594 0 45.84375 27.335938 112.1875 79.054688 191.863281 26.839844 41.347657 53.867187 76.363281 68.714844 94.894531 14.871093-19.039062 42.15625-55.207031 69.164062-97.339843 51.640625-80.550781 78.933594-146.054688 78.933594-189.417969 0-81.570312-66.363282-147.933594-147.933594-147.933594zm0 0" /></svg>
-        </a>
-    </g>
-    
-    <g>
-        <a xlink:href="mailto:info@newId.pl">
-            <rect x="63%" y="60" width="130" height="130" fill="black" fill-opacity="0" ></rect>
-            <svg x="63%" y="60" width="130" height="130"  viewBox="0 0 512 512"  xmlns="http://www.w3.org/2000/svg"><path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm-11.52 32L256 236.32 59.52 96h392.96zM480 400c0 8.837-7.163 16-16 16H48c-8.837 0-16-7.163-16-16V115.68l214.72 153.28a16 16 0 0018.56 0L480 115.68V400z"/></svg>
+            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[2]" [parent]="parent" x="44%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+                <g>
+                    <path d="M250,246.71c-17.21,0-34.43-6.55-47.53-19.66c-26.21-26.21-26.21-68.85,0-95.06
+                        c12.69-12.7,29.57-19.69,47.53-19.69s34.83,6.99,47.53,19.69c26.21,26.21,26.21,68.85,0,95.06
+                        C284.42,240.16,267.21,246.71,250,246.71z"/>
+                    <path d="M250.16,476.6l-10.28-12.07c-6.02-7.07-147.41-174.42-147.41-283.6C92.47,94.07,163.14,23.4,250,23.4
+                        s157.53,70.67,157.53,157.53c0,103.81-141.27,276.16-147.28,283.44L250.16,476.6z"/>
+                </g>    
+            
+            </svg>
         </a>
     </g>
 
-    <g>
+    <g class="social-icon" transform-origin="center">
+        <a xlink:href="mailto:info@newId.pl">
+            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[3]" [parent]="parent" x="63%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+                <path d="M315.33,174.42c-38.42-10.51-81.89,6.82-111.83,33.08c-18.22,15.98-31.55,41.56-37.44,65.07
+                s5.32,52.84,28.84,58.69c13.26,3.3,27.18-1.29,39.58-7.04c36.07-16.72,67.19-43.96,88.53-77.5c9.27-14.58,15.45-36.63,1.54-46.87
+                c-9.4-6.92-23.44-3.43-31.87,4.64c-8.43,8.07-12.58,19.51-16.43,30.52c-8.14,23.3-15.64,50.8-1.73,71.18
+                c11.26,16.5,34.01,22.28,53.5,17.9c19.49-4.38,36.07-17.16,49.99-31.47c34.6-35.57,56.77-83.32,60.23-132.83
+                c1.69-24.14-1.25-49.39-13.71-70.13c-15.26-25.41-43.58-41.25-72.85-45.95c-29.27-4.7-59.39,0.73-87.39,10.47
+                c-60.71,21.12-113.59,62.56-151.55,114.43c-30.33,41.44-51.77,91.08-51.43,142.43c0.34,51.35,25.23,104,69.78,129.54
+                c51.8,29.69,118.41,18,171.39-9.54c46.77-24.31,87.47-60.18,117.46-103.52"/>
+            </svg>
+        </a>
+    </g>
+
+    <g class="social-icon" transform-origin="center">
         <a xlink:href="tel:+48509229735">
-            <rect x="81%" y="60" width="130" height="130" fill="black" fill-opacity="0" ></rect>
-            <svg x="81%" y="60" width="130" height="130" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"><path d="m13.33 18.076c4.05.964 5.475-2.5 4.761-3.793-.286-.516-2.856-1.507-2.981-1.555-1.104-.402-1.512.348-2.277 1.335-1.469-.735-2.454-1.314-3.466-2.96.057-.071.133-.155.19-.219.354-.396 1.017-1.134.565-2.037-.38-.757-.569-1.285-.708-1.672-.403-1.121-.71-1.425-2.098-1.425-1.445 0-2.566 1.899-2.566 3.534 0 3.569 4.798 7.889 8.58 8.792zm-6.014-10.826c.3 0 .452.01.528.022.162.343.326 1.059.93 2.173-.094.351-1.429 1.174-.81 2.238 1.265 2.148 2.531 2.893 4.345 3.795 1.208.546 1.594-.443 2.36-1.312.355.144 1.553.674 2.079.94-.047 1.036-1.047 1.992-3.07 1.51-3.472-.829-7.429-4.735-7.429-7.333.001-.988.694-2.033 1.067-2.033z"/><path d="m.083 23.085c-.131.474.224.949.723.949.18 0-.114.046 5.848-1.5 2.427 1.236 4.272 1.197 5.45 1.308 10.555 0 15.725-12.873 8.461-20.363-9.957-9.624-25.464 2.336-18.975 14.127zm19.288-18.672c.173.316 5.135 4.791 2.372 11.478-1.701 4.12-5.626 6.659-10.024 6.421-3.578-.199-4.504-1.477-5.163-1.302l-4.683 1.22 1.245-4.524c.054-.194.027-.401-.073-.575-5.983-10.324 7.546-20.939 16.326-12.718z"/></svg>
+            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[4]" [parent]="parent" x="81%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+                <g>
+                    <path d="M281.71,373.26c78.29,18.64,105.84-48.33,92.04-73.32c-5.53-9.97-55.21-29.13-57.63-30.06
+                        c-21.34-7.77-29.23,6.73-44.02,25.81c-28.4-14.21-47.44-25.4-67-57.22c1.1-1.37,2.57-3,3.67-4.23
+                        c6.84-7.66,19.66-21.92,10.92-39.38c-7.35-14.63-11-24.84-13.69-32.32c-7.79-21.67-13.73-27.55-40.56-27.55
+                        c-27.93,0-49.6,36.71-49.6,68.32C115.85,272.3,208.6,355.81,281.71,373.26z"/>
+                    <path d="M25.62,468.23c-2.53,9.16,4.33,18.35,13.98,18.35c3.48,0-2.2,0.89,113.05-29
+                        c46.92,23.89,82.58,23.14,105.36,25.29c204.04,0,303.98-248.85,163.56-393.64C229.09-96.83-70.68,134.38,54.76,362.31L25.62,468.23
+                        z"/>
+                </g>
+            </svg>
         </a>
     </g>
 
