--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -13,7 +13,7 @@
 
 
 
-<div fxLayout="column" class="home-container">
+<div fxLayout="column">
     <div fxLayout="column" fxLayoutAlign="center center">
         <section>
             <div class="logo-container">
@@ -35,7 +35,7 @@
 
     <section>
         <div class="socials">
-            <app-social-links [delayFullTime]="400" [delayTimeout]="3000"></app-social-links>
+            <app-social-links></app-social-links>
         </div>
     </section>
 
