--- a/src/app/sites/social-links/social-links.component.html
+++ b/src/app/sites/social-links/social-links.component.html
@@ -2,7 +2,7 @@
     xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" viewBox="0 0 1100 250" preserveAspectRatio="xMidYMid meet">
     <g class="social-icon" transform-origin="center">
         <a xlink:href="https://www.facebook.com/newIdPL">
-            <svg appPathLengthInfo [strokeBig]="'8px'"  [animDelay]="delayArr[0]" [parent]="parent" x="7%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+            <svg appPathLengthInfo [strokeBigPx]="8"  [animDelay]="delayArr[0]" x="7%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
                 <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
                 <path d="M264.11,466.75H54.2c0,0-8.38-0.88-14.99-7.5c-3.99-3.99-6.17-7.87-6.17-16.32c0-21.61,0-388.07,0-388.07
                 s1.32-9.7,7.06-14.99c6.43-5.94,12.79-6.61,12.79-6.61h393.36c0,0,9.44,1.99,14.11,7.06c5.29,5.73,6.61,14.11,6.61,14.11v390.72
@@ -15,7 +15,7 @@
 
     <g class="social-icon" transform-origin="center">
         <a xlink:href="https://www.instagram.com/newId.PL/">
-            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[1]" [parent]="parent" x="25%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[1]" x="25%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
                 <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
                 <path d="M363.78,21H148.22C78.07,21,21,78.07,21,148.22v215.55C21,433.93,78.07,491,148.22,491h215.55
                 C433.93,491,491,433.93,491,363.78V148.22C491,78.07,433.93,21,363.78,21z"/>
@@ -27,7 +27,7 @@
 
     <g class="social-icon" transform-origin="center">
         <a xlink:href="https://g.page/newIdpl">
-            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[2]" [parent]="parent" x="44%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[2]" x="44%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
                 <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
                 <g>
                     <path d="M250,246.71c-17.21,0-34.43-6.55-47.53-19.66c-26.21-26.21-26.21-68.85,0-95.06
@@ -43,7 +43,7 @@
 
     <g class="social-icon" transform-origin="center">
         <a xlink:href="mailto:info@newId.pl">
-            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[3]" [parent]="parent" x="63%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[3]" x="63%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
                 <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
                 <path d="M315.33,174.42c-38.42-10.51-81.89,6.82-111.83,33.08c-18.22,15.98-31.55,41.56-37.44,65.07
                 s5.32,52.84,28.84,58.69c13.26,3.3,27.18-1.29,39.58-7.04c36.07-16.72,67.19-43.96,88.53-77.5c9.27-14.58,15.45-36.63,1.54-46.87
@@ -58,7 +58,7 @@
 
     <g class="social-icon" transform-origin="center">
         <a xlink:href="tel:+48509229735">
-            <svg appPathLengthInfo [strokeBig]="'8px'" [animDelay]="delayArr[4]" [parent]="parent" x="81%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[4]" x="81%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
                 <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
                 <g>
                     <path d="M281.71,373.26c78.29,18.64,105.84-48.33,92.04-73.32c-5.53-9.97-55.21-29.13-57.63-30.06
