--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,6 @@
     --paleta-col-5: #D98E04;
 }
 
-
 * {
     font-family: Raleway;
 }
@@ -22,6 +21,11 @@ body {
     font-size: calc(16px + (26 - 16) * ((100vw - 300px) / (1600 - 300)));
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
 
 /* unvisited link */
 a {
@@ -50,15 +54,52 @@ p:focus, div:focus {
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    /* font-family: Roboto, "Helvetica Neue", sans-serif;  */
+}
+
+
+
+
+.bg-1 {
+    background-color: var(--paleta-col-1);
+    border: none;
+}
+.bg-2 {
+    background-color: var(--paleta-col-2);
+    border: none;
+}
+.bg-3 {
+    background-color: var(--paleta-col-3);
+    border: none;
+}
+.bg-4 {
+    background-color: var(--paleta-col-4);
+    border: none;
+}
+.bg-5 {
+    background-color: var(--paleta-col-5);
+    border: none;
+}
+
 
 
 .component-container {
     position: relative;
+    margin: auto;
+    max-width: 1260px; 
 }
 
-.pointer {
-    cursor: pointer;
+.header-footer-container {
+    width: 100%;
+}
+.header-footer {
+    margin: auto;   
+    max-width: 300px;
+    width: 100%;
+    height: 100%;
+    padding: 10px;    
 }
 
 .img-shadow {
@@ -69,13 +110,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     box-shadow: 0 0 20px #333333;
 }
 
+
+.pointer {
+    cursor: pointer;
+}
+
+
 .text-block {
-    max-width: 960px;
-    margin: auto;
     /* padding-top: 2em;
     padding-bottom: 2em; */
-
-    padding: 2em;
+    padding-left: 1em;
+    padding-right: 1em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -104,28 +151,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 
-.bg-1 {
-    background-color: var(--paleta-col-1);
-    border: none;
-}
-.bg-2 {
-    background-color: var(--paleta-col-2);
-    border: none;
-}
-.bg-3 {
-    background-color: var(--paleta-col-3);
-    border: none;
-}
-.bg-4 {
-    background-color: var(--paleta-col-4);
-    border: none;
-}
-.bg-5 {
-    background-color: var(--paleta-col-5);
-    border: none;
-}
-
-
 
 .svg-click {
     fill: none;
@@ -137,4 +162,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: auto;
     width: 100%;
     max-width: 960px;
+}
+
+
+@media screen and (min-width: 900px)  {
+    
+    .text-block {
+        column-count: 2;
+        max-width: 960px;
+        padding-top: 1em;
+        padding-bottom: 1em;
+
+    }
+
 }
