fix promocje style

--- a/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
+++ b/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
@@ -1,7 +1,5 @@
-<div class="kaczy-container">
+<div class="component-container kaczy-container">
     <div class="kaczy-content">
-
-
         <section>
             <h1>
                 NewId - "Kaczy Brzeg"
@@ -23,7 +21,7 @@
                             społecznościowcyh bogatych w profesjonalne fotografie, grafiki, animacje, video...
                         </div>
                         <div>
-                            <app-yt-player class="video-margin" [id]="'Bd384WTfhDo'"></app-yt-player>
+                            <app-yt-player [id]="'Bd384WTfhDo'"></app-yt-player>
                         </div>
                     </div>
     
