--- a/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
+++ b/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
@@ -1,9 +1,6 @@
-<div class="pakiet-start-container">
-
-
+<div class="component-container">
     <section>
-
-        <div class="pakiet-start-block-1">
+        <div class="bg-4">
             <div class="text-block">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 1080" preserveAspectRatio="xMidYMid meet">
                     <image x="0" y="0" width="100%" height="100%" xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
@@ -27,7 +24,7 @@
         </div>
     
         
-        <div class="pakiet-start-block-2">
+        <div class="bg-2">
             <div class="empty-line">&nbsp;</div>
         </div>
 
@@ -35,13 +32,9 @@
     </section>
 
 
-
-
     <section>
-
-        <div class="pakiet-start-block-3">
-            <div class="text-block">
-                <div class="pakiet-start-info">
+        <div class="bg-3">
+            <div class="text-block pakiet-start-info">
                     <p>
                         Skuteczne pozycjonowanie, odpowiednia domena, profesjonalnie przygotowane profile społecznościowe fb/insta. 
                     </p>
@@ -56,11 +49,11 @@
                     <p>
                         Najważniejszym atutem tej oferty są przede wszystkim konstultacje; Informacje, skuteczne sugestie, zalecenia jak SAMODZIELNIE kontynuować pracę nad profilem. Potrzebujesz tylko narzędzi i odpowiednich wskazówek jak z nich korzystać ? <br/>Ta oferta kierowana jest właśnie dla Ciebie!
                     </p>
-                </div>
+
             </div>
         </div>
     
-        <div class="pakiet-start-block-2">
+        <div class="bg-2">
             <div class="empty-line">&nbsp;</div>
         </div>
 
@@ -71,7 +64,7 @@
 
 
     <section>
-        <div class="pakiet-start-block-1">
+        <div class="bg-1">
             <div class="">
                 <div class="pakiet-start-info">
     
