--- a/src/styles.css
+++ b/src/styles.css
@@ -22,9 +22,9 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0.5em;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+    display: inline-block;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 
 /* unvisited link */
@@ -91,9 +91,19 @@ body {
     max-width: 1260px; 
 }
 
+.content-container {
+    padding: 1em;
+    max-width: 960px;
+}
+
+.empty-line {
+    height: 7px;
+}
+
 .header-footer-container {
     width: 100%;
 }
+
 .header-footer {
     margin: auto;   
     max-width: 300px;
@@ -102,10 +112,16 @@ body {
     padding: 10px;    
 }
 
+.img-container {
+    margin: auto;
+    padding: 1em;
+}
+
 .img-shadow {
     box-shadow: none;
     transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+
 .img-shadow:hover {
     box-shadow: 0 0 20px #333333;
 }
@@ -117,8 +133,6 @@ body {
 
 
 .text-block {
-    /* padding-top: 2em;
-    padding-bottom: 2em; */
     padding-left: 1em;
     padding-right: 1em;
     margin-left: auto;
@@ -140,6 +154,10 @@ body {
     text-underline-position: below;
 }
 
+.text-white {
+    color: white;
+}
+
 .router-link {
     cursor: pointer;    
     transition: color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -158,21 +176,35 @@ body {
     stroke: azure;
 }
 
+.yt-player {
+    margin: 1em;
+    padding: 1em;
+}
+
 .yt-player-fullsize {
     margin: auto;
+    padding: 1em;
     width: 100%;
     max-width: 960px;
 }
 
+@media screen and (max-width: 900px)  {
+    p, ul {
+        display: inline-block;
+    }
+}
 
 @media screen and (min-width: 900px)  {
-    
     .text-block {
         column-count: 2;
+        column-width: 465px;
         max-width: 960px;
         padding-top: 1em;
         padding-bottom: 1em;
-
     }
+
+
+    
+   
 
 }
