--- a/src/app/sites/promocje/promocje/promocje.component.html
+++ b/src/app/sites/promocje/promocje/promocje.component.html
@@ -1,29 +1,49 @@
-<div class="component-container">
+<section>
     <div fxLayout="row" fxLayoutAlign="center center" class="promocje-container">
         <div fxLayout="column" fxLayout.gt-sm="row wrap">
-                <mat-card  fxFlex.gt-sm="0 1 calc(50%-10px)">
-                    <mat-card-header>
-                        <mat-card-title>Obsługa Marketingowa</mat-card-title>
-                        <mat-card-subtitle>3msc by zrobić różnicę na rynku!</mat-card-subtitle>
-                    </mat-card-header>
-                        <img routerLink="/promocje/obsluga-marketingowa-3msc" mat-card-image src="../../../../assets/images/promocje/newId_obsluga_marketingowa_3msc_1x1.png" alt="NewId - Obsluga Marketingowa 3msc">
-                    <mat-card-content>
-                    
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <button mat-flat-button color="warn" routerLink="/promocje/obsluga-marketingowa-3msc">Zobacz szczegóły</button>
-                    </mat-card-actions>
-                </mat-card>
+            <mat-card fxFlex.gt-sm="0 1 calc(50%-10px)">
+                <mat-card-header>
+                    <mat-card-title>Reklama Twojego Produktu</mat-card-title>
+                    <mat-card-subtitle>Kompleksowa kampania reklamowa Google/Facebook</mat-card-subtitle>
+                </mat-card-header>
+                <img routerLink="/promocje/reklama-twojego-produktu-facebook-google" mat-card-image
+                    src="../../../../assets/images/promocje/newId_reklama_Twojego_produktu.jpg"
+                    alt="NewId - Kompleksowa Reklama Twojego Produktu">
+                <mat-card-content>
+
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-flat-button color="warn" routerLink="/promocje/reklama-twojego-produktu-facebook-google">Zobacz
+                        szczegóły</button>
+                </mat-card-actions>
+            </mat-card>
+            <mat-card fxFlex.gt-sm="0 1 calc(50%-10px)">
+                <mat-card-header>
+                    <mat-card-title>Obsługa Marketingowa</mat-card-title>
+                    <mat-card-subtitle>3msc by zrobić różnicę na rynku!</mat-card-subtitle>
+                </mat-card-header>
+                <img routerLink="/promocje/obsluga-marketingowa-3msc" mat-card-image
+                    src="../../../../assets/images/promocje/newId_obsluga_marketingowa_3msc_1x1.png"
+                    alt="NewId - Obsluga Marketingowa 3msc">
+                <mat-card-content>
+
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-flat-button color="warn" routerLink="/promocje/obsluga-marketingowa-3msc">Zobacz
+                        szczegóły</button>
+                </mat-card-actions>
+            </mat-card>
 
 
-            <mat-card  fxFlex.gt-sm="0 1 calc(50%-10px)">
+            <mat-card fxFlex.gt-sm="0 1 calc(50%-10px)">
                 <mat-card-header>
                     <mat-card-title>Pakiet START</mat-card-title>
                     <mat-card-subtitle>Twoja firma w Internecie</mat-card-subtitle>
                 </mat-card-header>
-                    <img routerLink="/promocje/pakiet-start" mat-card-image src="../../../../assets/images/promocje/newId_pakietStart.png" alt="NewId - Paket Start">
+                <img routerLink="/promocje/pakiet-start" mat-card-image
+                    src="../../../../assets/images/promocje/newId_pakietStart.png" alt="NewId - Paket Start">
                 <mat-card-content>
-                
+
                 </mat-card-content>
                 <mat-card-actions>
                     <button mat-flat-button color="warn" routerLink="/promocje/pakiet-start">Zobacz szczegóły</button>
@@ -31,4 +51,4 @@
             </mat-card>
         </div>
     </div>
-</div>
+</section>
