appearFromBottom init directive

--- a/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
+++ b/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
@@ -37,7 +37,7 @@
     </section>
 
 
-    <section class="bg-1">
+    <section appAppearFromBottom class="bg-1">
         <h1>
             Trzy miesiące <strong>bardzo</strong> intensywnej pracy!
         </h1>
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <section class="bg-3">
+    <section appAppearFromBottom class="bg-3">
 
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1080 340"
             preserveAspectRatio="xMidYMid meet">
@@ -95,7 +95,7 @@
 
 
 
-    <section class="bg-1">
+    <section appAppearFromBottom class="bg-1">
         <h1>
             Znamy realia
         </h1>
@@ -202,7 +202,7 @@
 
 
 
-    <section class="bg-3">
+    <section appAppearFromBottom class="bg-3">
                 <h1>Co by tu wypromować...</h1>
 
             <div class="text-block">
@@ -267,7 +267,7 @@
 
 
 
-    <section class="bg-3">
+    <section appAppearFromBottom class="bg-3">
             <!-- <app-promocje-zadzwon routerLink="/promocje/obsluga-marketingowa-3msc-zamow"></app-promocje-zadzwon> -->
             <app-promocje-zadzwon routerLink="/kontakt"></app-promocje-zadzwon>
     </section>
